[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/FFFFORWA.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Tasks/Task3/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="scoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -268.0
margin_top = 14.0
margin_right = 292.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageLaabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = -45.0
margin_right = 255.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "Avoid the monsters"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartGameTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="messageTimer" to="." method="_on_messageTimer_timeout"]
[connection signal="timeout" from="StartGameTimer" to="." method="_on_StartGameTimer_timeout"]
